fix: lib_dir includes fixed

--- a/platformio.ini
+++ b/platformio.ini
@@ -14,7 +14,7 @@ board = uno
 upload_port = /dev/ttyACM0
 framework = arduino
 lib_dir =
-    lib/UltrasonicSensor/*
-    lib/MotorDriver/*
+    lib/UltrasonicSensor/
+    lib/MotorDriver/
 lib_deps =
     arduino-libraries/Servo @ 1.2.1
