--- a/platformio.ini
+++ b/platformio.ini
@@ -16,5 +16,7 @@ framework = arduino
 lib_dir =
     lib/UltrasonicSensor/
     lib/MotorDriver/
+    lib/RGBLed/
 lib_deps =
     arduino-libraries/Servo @ 1.2.1
+    fastled/FastLED @ 3.6.0
