--- a/platformio.ini
+++ b/platformio.ini
@@ -1,22 +1,22 @@
-; PlatformIO Project Configuration File
-;
-;   Build options: build flags, source filter
-;   Upload options: custom upload port, speed and extra flags
-;   Library options: dependencies, extra library storages
-;   Advanced options: extra scripting
-;
-; Please visit documentation for the other options and examples
-; https://docs.platformio.org/page/projectconf.html
-
 [env:uno]
 platform = atmelavr
 board = uno
 upload_port = /dev/ttyACM0
 framework = arduino
+monitor_speed = 9600
+
+include_dir =
+    include/
+
+src_dir =
+    src/
+
 lib_dir =
     lib/UltrasonicSensor/
     lib/MotorDriver/
     lib/RGBLed/
+
 lib_deps =
     arduino-libraries/Servo @ 1.2.1
     fastled/FastLED @ 3.6.0
+    z3t0/IRremote @ 4.1.2
